[package]
name = "adrenaline-geo"
version = "1.0.0"
authors = ["neo279 <62439459+neo279@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json", "blocking"] }
widestring = { version = "0.4" }
libc = "0.2.0"
serde = { version = "1.0.105", features = ["derive"]}

[lib]
crate-type = ["cdylib"]      # Creates dynamic lib
